# mcp-model-registry

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py  test_client.py
models/: __init__.py  registry.py  train_demo_models.py
